--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -67,11 +67,11 @@
                       </form>
 
                       <div class="text-center mt-3">
-                        <a href="/auth/recoverpwd" class="btn btn-link">Forgot Password?</a>
+                        <a href="/request-password-reset" class="btn btn-link">Forgot Password?</a>
                       </div>
 
                       <div class="text-center">
-                        <a href="/auth/signup" class="btn btn-outline-primary w-100 mt-2">Create an Account</a>
+                        <a href="/signup" class="btn btn-outline-primary w-100 mt-2">Create an Account</a>
                       </div>
                     </div>
                   </div>
