--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -74,8 +74,9 @@
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav><!-- End Nav Menu -->
+      <a class="btn-getstarted" href="/signup">Signup</a>
 
-      <a class="btn-getstarted" href="/auth/login">Login</a>
+      <a class="btn-getstarted" href="/login">Login</a>
 
     </div>
   </header><!-- End Header -->
@@ -95,7 +96,7 @@
                 <div class="col-lg-5">
                     <div class="sign-up-form d-flex" data-aos="fade-up" data-aos-delay="300">
                         <span class="form-control">Sign up and Activate Free Trial</span>
-                        <button class="btn btn-danger" onclick="window.location.href='/auth/signup'">Sign up</button>
+                        <button class="btn btn-danger" onclick="window.location.href='localhost:5000/signup'">Sign up</button>
                     </div>
                 </div>
             </div>
