--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -53,7 +53,7 @@
 
                                             <div class="card-body">
                                                
-                                                <form role="form" id="registrationForm" method="POST" action="/auth/signup" autocomplete="off">
+                                                <form role="form" id="registrationForm" method="POST" action="/signup" autocomplete="off">
                                                    
                                                 
                                                     <div class="input-group input-group-outline mb-3">
@@ -102,7 +102,7 @@
                                                 
                                             
                                                 <p class="mt-3 text-center">
-                                                    Already have an account? <a href="/auth/login" class="text-decoration-none">Login here</a>
+                                                    Already have an account? <a href="/login" class="text-decoration-none">Login here</a>
                                                 </p>
                                             </div>
                                         </div>
