--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -74,7 +74,6 @@
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav><!-- End Nav Menu -->
-      <a class="btn-getstarted" href="/signup">Signup</a>
 
       <a class="btn-getstarted" href="/login">Login</a>
 
@@ -95,8 +94,8 @@
                 </div>
                 <div class="col-lg-5">
                     <div class="sign-up-form d-flex" data-aos="fade-up" data-aos-delay="300">
-                        <span class="form-control">Sign up and Activate Free Trial</span>
-                        <button class="btn btn-danger" onclick="window.location.href='localhost:5000/signup'">Sign up</button>
+                        <span class="form-control">Signup to Activate Free Trial</span>
+                        <a href="/signup" class="btn btn-danger" data-aos="fade-up" data-aos-delay="300">Get Started</a>
                     </div>
                 </div>
             </div>
