--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -66,10 +66,16 @@
                                                       <button type="submit" class="btn btn-lg bg-gradient-primary btn-lg w-100 mt-4 mb-0">Login</button>
                                                     </div>
                                                 </form>
-
+                                                
                                                 <p class="mt-3 text-center">
-                                                    Don't have an account? <a href="/signup" class="text-decoration-none">Sign up here</a>
-                                                </p>
+                                                    <a href="/password-reset/recoverpwd" class="btn btn-lg bg-gradient-secondary btn-lg w-100 mt-4 mb-0">Forgot your password?</a>
+                                                  </p>
+                                                  
+                                                  
+                                                  <p class="mt-3 text-center">
+                                                    Don't have an account? <a href="/signup" class="btn btn-lg bg-gradient-secondary btn-lg w-100 mt-4 mb-0">Sign up here</a>
+                                                  </p>
+                                                  
                                             </div>
                                         </div>
                                     </div>
