--- a/views/auth/activate.ejs
+++ b/views/auth/activate.ejs
@@ -51,7 +51,7 @@
 
                   <!-- Image Column -->
                   <div class="col-lg-5 content-right">
-                    <img src="/assets/images/login/01.png" class="img-fluid image-right" alt="Activation Illustration" />
+                    <img src="/assets/images/login/side-bkgpng" class="img-fluid image-right" alt="Activation Illustration" />
                   </div>
                 </div>
               </div>
