--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -14,12 +14,12 @@
     gtag('config', 'G-TXR1WFJ4GP');
   </script>
 
-  <title>Home - Sales Pilot</title>
+  <title>Home - SalesPILOT</title>
 
   <!-- SEO Meta Tags -->
-  <meta name="description" content="Boost your business efficiency with SalesPilot – the ultimate sales management app. Track leads, manage clients, and increase revenue effortlessly with our user-friendly platform.">
+  <meta name="description" content="Boost your business efficiency with SalesPILOT – the ultimate sales management app. Track leads, manage clients, and increase revenue effortlessly with our user-friendly platform.">
   <meta name="keywords" content="Sales productivity tools, Sales and Client management, Business efficiency tools">
-  <meta name="author" content="SalesPilot Team">
+  <meta name="author" content="SalesPILOT Team">
 
   <!-- Favicons -->
   <link rel="icon" href="/home_assets/img/favicon.png">
@@ -59,9 +59,9 @@
 
       <a href="/home" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="/home_assets/images/logonew.jpg" alt="Sales Pilot Logo"> -->
-        <img class="app-logo" src="/home_assets/images/logonew.jpg" alt="SalesPilot Logo">
-        <h1>SalesPilot</h1><span>.</span>
+        <!-- <img src="/home_assets/images/logonew.jpg" alt="Sales PILOT Logo"> -->
+        <img class="app-logo" src="/home_assets/images/logonew.jpg" alt="SalesPILOT Logo">
+        <h1>SalesPILOT</h1><span>.</span>
       </a>
 
       <!-- Nav Menu -->
@@ -84,12 +84,12 @@
     <!-- Hero Section - Home Page -->
     <section id="hero" class="hero">
 
-        <img src="/home_assets/images/salespilotindex.jpg" alt="" data-aos="fade-in">
+        <img src="/home_assets/images/salesPILOTindex.jpg" alt="" data-aos="fade-in">
 
         <div class="container">
             <div class="row">
                 <div class="col-lg-10">
-                    <h2 data-aos="fade-up" data-aos-delay="100">SalesPilot</h2>
+                    <h2 data-aos="fade-up" data-aos-delay="100">SalesPILOT</h2>
                     <p data-aos="fade-up" data-aos-delay="200">Inventory Management & Sales Analytics</p>
                 </div>
                 <div class="col-lg-5">
@@ -110,9 +110,9 @@
             <div class="row align-items-xl-center gy-5">
 
                 <div class="col-xl-5 content">
-                    <h3>SalesPilot</h3>
+                    <h3>SalesPILOT</h3>
                     <h2>Inventory Management & Sales Analytics</h2>
-                    <p>SalesPilot is a powerful inventory management and sales analytics tool that helps you streamline your business operations,
+                    <p>SalesPILOT is a powerful inventory management and sales analytics tool that helps you streamline your business operations,
                         optimize inventory levels, and make data-driven decisions for increased sales and profitability.</p>
                 </div>
                 <div class="col-xl-7">
@@ -147,7 +147,7 @@
         <!--  Section Title -->
         <div class="container section-title" data-aos="fade-up">
             <h2>Services</h2>
-            <p>The innovation hub of Phemcode Integrated Services, the visionary force behind SalesPilot.</p>
+            <p>The innovation hub of Phemcode Integrated Services, the visionary force behind SalesPILOT.</p>
         </div><!-- End Section Title -->
 
         <div class="container">
@@ -183,7 +183,7 @@
     <div class="row gy-4">
       <div class="col-lg-5 col-md-12 footer-about">
         <a href="/" class="logo d-flex align-items-center">
-          <span>Sales Pilot</span>
+          <span>Sales PILOT</span>
         </a>
         <p>Phemcode Integrated Services | Innovate. Transform. Excel.</p>
         <div class="social-links d-flex mt-4">
@@ -227,7 +227,7 @@
   </div>
 
   <div class="container text-center mt-4">
-    <p>&copy; <strong>SalesPilot</strong> All Rights Reserved</p>
+    <p>&copy; <strong>SalesPILOT</strong> All Rights Reserved</p>
     <div class="credits">
       Designed by <a href="https://phemcode.cybertrendhub.store">Phemcode</a>
     </div>
