--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -68,7 +68,7 @@
                                                 </form>
                                                 
                                                 <p class="mt-3 text-center">
-                                                    <a href="/password-reset/recoverpwd" class="btn btn-lg bg-gradient-secondary btn-lg w-100 mt-4 mb-0">Forgot your password?</a>
+                                                    <a href="/password-reset/recoverpwd" class="btn btn-lg bg-gradient-primary btn-lg w-100 mt-4 mb-0">Forgot your password?</a>
                                                   </p>
                                                   
                                                   
@@ -81,7 +81,7 @@
                                     </div>
 
                                     <div class="col-lg-5 content-right">
-                                        <img src="/assets/images/login/01.png" class="img-fluid image-right" alt="Login Illustration">
+                                        <img src="/assets/images/login/side-bkg.png" class="img-fluid image-right" alt="Login Illustration">
                                     </div>
                                 </div>
                             </div>
