--- a/views/auth/recoverpwd.ejs
+++ b/views/auth/recoverpwd.ejs
@@ -59,11 +59,14 @@
                                                 </div>
                                               </form>
                                               
+                                              <p class="mt-3 text-center">
+                                                Already have an account? <a href="/login" class="btn btn-lg bg-gradient-secondary btn-lg w-100 mt-4 mb-0">Login here</a>
+                                              </p>
                                             
                                         </div>
                                     </div>
                                     <div class="col-lg-5 content-right">
-                                        <img src="/assets/images/login/01.png" class="img-fluid image-right" alt="Password Recovery Image">
+                                        <img src="/assets/images/login/side-bkg.png" class="img-fluid image-right" alt="Password Recovery Image">
                                     </div>
                                 </div>
                             </div>
