--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -95,7 +95,7 @@
                 </div>
                 <div class="col-lg-5">
                     <div class="sign-up-form d-flex" data-aos="fade-up" data-aos-delay="300">
-                        <span class="form-control">Signup to Activate Free Trial</span>
+                        <span class="form-control">Signup to Activate Free 3 Month Subscription Trial</span>
                         <a href="/signup" class="btn btn-danger" data-aos="fade-up" data-aos-delay="300">Get Started</a>
                     </div>
                 </div>
